[gd_scene load_steps=3 format=3 uid="uid://blvvh7m353g4l"]

[ext_resource type="Script" uid="uid://dcdr4stl5wkq5" path="res://scenes/ui/spell_cooldown_indicator.gd" id="1_dojd6"]
[ext_resource type="Texture2D" uid="uid://c53oglprnqbva" path="res://assets/spells/Firebolt SpriteSheet.png" id="2_xygbl"]

[node name="SpellCooldownIndicator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dojd6")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xygbl")

[node name="CooldownOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.721569)

[node name="CooldownLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "ezae"
